fix level selection containers on mobile and make level 3 different from level 1

--- a/client/scss/nav.scss
+++ b/client/scss/nav.scss
@@ -153,7 +153,8 @@
       margin-top: 10px;
 
       @media screen and (max-width: 850px) {
-        width: 20%;
+        width: 80%;
+        height: 15%;
         padding: 0 20%;
         right: 20px;
       }
