--- a/public/resources/styles/style.css
+++ b/public/resources/styles/style.css
@@ -124,7 +124,8 @@
       margin-top: 10px; }
       @media screen and (max-width: 850px) {
         .navigation .levels-container .level-select {
-          width: 20%;
+          width: 80%;
+          height: 15%;
           padding: 0 20%;
           right: 20px; } }
     .navigation .levels-container .level-select:hover {
